--- a/Payload_Type/zippy/src/agent_code/config_zippy-websocket.json
+++ b/Payload_Type/zippy/src/agent_code/config_zippy-websocket.json
@@ -2,12 +2,11 @@
   "callback_host": "ws://10.10.10.69",
   "USER_AGENT": "Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko",
   "AESPSK": {
-	"dec_key": "v5wPG4SLMxR+w+DJz8Asyk2/o6WNf0uTs2w4N/6z1g8=",
-	"enc_key": "v5wPG4SLMxR+w+DJz8Asyk2/o6WNf0uTs2w4N/6z1g8=",
-	"value": "aes256_hmac"
+	"dec_key": "",
+	"enc_key": "",
+	"value": "none"
   },
   "callback_interval": "5",
-  "encrypted_exchange_check": "F",
   "domain_front": "",
   "ENDPOINT_REPLACE": "socket",
   "callback_jitter": "3",
